--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <i data-lucide="user" width="20" height="20"></i>
       </button>
       <a href="#" class="btn-login">
-        <i data-lucide="log-in" width="16" height="16"></i> login
+        <i data-lucide="log-in" width="16" height="16"></i> Login
       </a>
     </div>
   </nav>
